src/objects/vlocity_ins__ContextDimension__c.object
<CustomObject>
    <description>Represents a context dimension used to create context rules.</description>
    <fields>
        <fullName>vlocity_ins__AppContextDimension__c</fullName>
        <label>AppContext Dimension</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CacheableMode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Based on this we will be deciding if the dimension must be used while generating combinations or not.</description>
        <label>Cacheable Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Code__c</fullName>
        <description>A unique identifier of the context dimension. This value is used in custom expressions, so use a unique but meaningful code value that is easy to read in custom expressions. Note: You cannot use spaces in a context dimension code due to rules parsing engine requirements.</description>
        <externalId>true</externalId>
        <label>Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ConditionWeight__c</fullName>
        <description>Condition Weight helps the TightestMatchInterface weigh rules for price list entries and child price lists. Note that product and promotion rules do not use condition weight.</description>
        <label>Condition Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__CriteriaFieldMap__c</fullName>
        <description>Fully qualified field name of the context criteria object field to which this Dimension is mapped.</description>
        <label>Criteria Field Map</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DataType__c</fullName>
        <description>Describes the type of data for this context dimension, for example Text, Number, Date, DateTIme, or Boolean.</description>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__DefaultValue__c</fullName>
        <description>Default value to process rules in case if we dont find a value for the corressponding field in the eligibility context.</description>
        <label>Default Value</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>Description of the context dimension. Use to describe the context dmension&apos;s purpose.</description>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DomainType__c</fullName>
        <description>Domain Type describes how rule condition values appear when creating a rule condition. Picklist allows you to select rule condition values from a Vlocity Picklist. Object Lookup allows you to select a specific record from an sObject. Type In allows you to enter free form strings.</description>
        <label>Domain Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Object Lookup</fullName>
                </value>
                <value>
                    <fullName>Type in</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <description>The start date of the period during which rules can use the context dimension.</description>
        <label>Effective From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <description>The end date of the period at which rules can no longer use the context dimension.</description>
        <label>Effective Until</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this context dimension. Used to identify the context dimension across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique context dimension identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether this context dimension is active or not.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsStrong__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If Dimension is strong or not. If strong &amp; a condition based on this dimension fails, the rule fails &amp; disqualifies the object.</description>
        <label>Strong</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Object__c</fullName>
        <description>Specifies the sObject to look up when the Domain Type is Object Lookup.</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PicklistSelectionMode__c</fullName>
        <description>Specifies whether to allow the user to select a single value or multiple values from the Vlocity picklist. Note: The context rule service supports only single values.</description>
        <label>Picklist Selection Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Multiple</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__RuleDimensionField__c</fullName>
        <description>The rule field that this dimension maps to.</description>
        <label>Rule Dimension Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Soft Qualified</fullName>
                </value>
                <value>
                    <fullName>Soft Disqualified</fullName>
                </value>
                <value>
                    <fullName>Hard Disqualified</fullName>
                </value>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Fatal</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__StrengthPriority__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The strength priority of a dimension defines the rlative strength of the dimension for tightest match clculations. The higher the value, the higher the priority.</description>
        <label>Strength Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Values__c</fullName>
        <description>Comma seperated values required for ANON Cacheable form.</description>
        <label>Values for caching</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__VlocityPicklistId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Specifies the Vlocity Picklist to use when the Domain Type is set to Picklist.</description>
        <label>Vlocity Picklist</label>
        <referenceTo>vlocity_ins__Picklist__c</referenceTo>
        <relationshipLabel>Vlocity Context Dimensions</relationshipLabel>
        <relationshipName>VlocityContextDimensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Volatility__c</fullName>
        <description>A TTL (time to live) for this context dimension value.</description>
        <label>Volatility</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Session</fullName>
                    <default>true</default>
                    <label>Session</label>
                </value>
                <value>
                    <fullName>Always</fullName>
                </value>
                <value>
                    <fullName>OnDemand</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                    <isActive>false</isActive>
                    <label>Order</label>
                </value>
                <value>
                    <fullName>Order Line</fullName>
                    <isActive>false</isActive>
                    <label>Order Line</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Vlocity Context Dimension</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Context Dimensions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>